--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,12 @@
+/*  your css code here. If applicable */
 body{
 	background-color:#f8f8f8;
-	display:flex;
-	justify-content:center;
-	align-items:center;
-	
 }
 .book-library{
-	 width:500px;
-    height:100%;
-    background-color:#ffffff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-	box-shadow:0px 0px 4px black;
-	border-radius:5px;
-	padding-block:10px;
-}
-.book{
 	display:flex;
-   flex-direction: column;
-   width:95%;
-   margin-top: 10px;
-   align-items: center;
-   justify-content: space-between;
+	text-align:center;
+	
 }
-.image{
-   box-sizing: border-box;
-   width:50%;
-   overflow: hidden;
-   margin-block:10px;
-}
-img{
-   width:100%;
-   height: 100%;
-    
-}
-.white-space{
-    width:99%;
-    height:10px;
-    background-color: black;
-    margin:0 auto;
-	margin-top:10px;
-}
-.para{
-    width:100%;
-    margin-bottom:10px;
-}
-h2,p{
-    margin:0px;
-}
-p{
-	color:#777777;
-}
-button{
-    width:490px;
-	background-color:#2ecc71;
-	color:white;
+h1{
+	text-align:center;
 }
