--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,37 @@
 /*  your css code here. If applicable */
+
 body{
 	background-color:#f8f8f8;
+	text-align:center;
 }
 .book-library{
-	display:flex;
-	text-align:center;
-	
+	background-color:#ffffff;
+	box-sizing:border-box;
+	box-shadow:10px 10px 10px 10px gray;
+ 
 }
-h1{
-	text-align:center;
+ 
+h2{
+	text-align:left;
+	margin-left:5%;
+	padding:0px;
+	margin-top:0px;
+	margin-bottom:0px;
+}
+.author-name{
+	color:#777777;
+	text-align:left;
+	margin-left:5%;
+	margin-top:0px;
+	margin-bottom:0px;
+	padding:0px;
+}
+.price-block{
+	vox-sizing:border-box;
+	background-color:rgb(46, 204, 113);
+	color:rgb(255,255,255);
+	max-width:90%;
+	margin-left:5%;
+	margin-bottom:10px;
+	
 }
